# lying-wiki-game

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: error.rs  main.rs  state.rs
backend/src/handlers/: mod.rs  rooms.rs  sse.rs  wiki.rs
docs/superpowers/plans/: 2026-05-24-lying-wiki-game.md
docs/superpowers/specs/: 2026-05-24-lying-wiki-game-design.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ScoreDrawer.tsx  Toast.tsx  WikiArticleSheet.tsx
frontend/src/hooks/: useDeviceToken.ts  useRoom.ts
frontend/src/screens/: CountdownScreen.tsx  HomeScreen.tsx  LobbyScreen.tsx  RoundActiveScreen.tsx  RoundRevealScreen.tsx  TopicSubmissionScreen.tsx
